# ai-writing-agent-v2

./: .gitignore  Dockerfile  Dockerfile.frontend  LICENSE  README.md  demo.tape  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.sh  test_report.json
.github/workflows/: pages.yml
ai_writing_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: models.yaml
docs/: API_KEYS.md  BLOG_POST.md  FEATURE_SHOWCASE.md  README.md  TEST_REPORT.md  USER_GUIDE.md  _config.yml  index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
src/: __init__.py
src/api/: server.py
src/cli/: main.py  onboarding.py
src/core/: brand_voice.py  health_dashboard.py  logger.py  output_formatter.py  quality_scorer.py  template_library.py  version_history.py
src/core/agents/: multi_agent.py
src/core/memory/: context.py
src/core/modes/: __init__.py  non_thinking.py  orchestrator.py  thinking.py
src/core/providers/: base.py  free.py  huggingface.py  mock.py  ollama.py  registry.py  vllm.py
src/core/rag/: loader.py
src/gui/: __init__.py  main.py
src/tui/: __init__.py  main.py
tests/: comprehensive_test.py  test_core.py
